<?xml version="1.0"?>
<package format="2">
  <name>behavior_agent</name>
  <version>0.0.0</version>
  <description>The decision tree</description>
  <maintainer email="korbinian@todo.todo">We</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
